--- a/Index.html
+++ b/Index.html
@@ -1,94 +1,67 @@
-<section class="job-section">
-  <h2>📚 Class 10 Government Jobs</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Naukri Saathi</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Naukri Saathi</h1>
+      <p>Your Friend in the Journey to a Government Job</p>
+      <a href="#" class="cta-button">Join Telegram/WhatsApp Group</a>
+    </div>
+  </header>
 
-  <div class="job-card">
-    <h3>1. SSC MTS & Havaldar</h3>
-    <p>✅ Class 10 pass | 🌍 All India | 💰 ₹23,000–₹25,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Office helper and security roles in govt depts</li>
-        <li>📝 CBT + Physical Test (for Havaldar)</li>
-        <li>📺 <a href="#">YouTube Prep Playlist</a> | 📄 <a href="#">Syllabus PDF</a></li>
-      </ul>
-    </details>
-  </div>
+  <main class="container">
+    <section>
+      <h2>📚 Jobs After Class 10</h2>
 
-  <div class="job-card">
-    <h3>2. SSC GD Constable</h3>
-    <p>✅ Class 10 pass | 💪 Physical test | 💰 ₹30,000–₹32,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Join BSF, CRPF, CISF, ITBP, SSB etc.</li>
-        <li>📝 Written + Physical test</li>
-        <li>📺 <a href="#">GD Prep Playlist</a> | 📄 <a href="#">PYQ PDF</a></li>
-      </ul>
-    </details>
-  </div>
+      <div class="job-card">
+        <h3>SSC MTS & Havaldar</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🌍 Location: All India<br>
+          💰 Salary: ₹23,000–₹25,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Office helper and Havaldar roles</li>
+            <li>Exam: CBT + Physical Test (for Havaldar)</li>
+            <li><a href="#">YouTube Playlist</a> | <a href="#">PDF Syllabus</a></li>
+          </ul>
+        </details>
+      </div>
 
-  <div class="job-card">
-    <h3>3. RRB Group D (Railways)</h3>
-    <p>✅ Class 10 pass | 🚆 Railways | 💰 ₹22,000–₹25,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Jobs like Helper, Track Maintainer, Porter</li>
-        <li>📝 CBT (No Interview)</li>
-        <li>📺 <a href="#">RRB Group D Playlist</a> | 📄 <a href="#">PYQs</a></li>
-      </ul>
-    </details>
-  </div>
+      <div class="job-card">
+        <h3>SSC GD Constable</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          💪 Physical test<br>
+          💰 Salary: ₹30,000–₹32,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Police Constable in BSF, CRPF, etc.</li>
+            <li>Selection: Written + Physical test</li>
+            <li><a href="#">YouTube Playlist</a> | <a href="#">PYQ PDF</a></li>
+          </ul>
+        </details>
+      </div>
 
-  <div class="job-card">
-    <h3>4. India Post GDS</h3>
-    <p>✅ Class 10 pass | 📬 Postal Dept | 💰 ₹10,000–₹14,500/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Gramin Dak Sevak in villages & towns</li>
-        <li>❌ No exam – merit based on marks</li>
-        <li>📺 <a href="#">GDS Process Video</a> | 📄 <a href="#">Official Notice</a></li>
-      </ul>
-    </details>
-  </div>
+      <!-- Add more job cards in same format -->
 
-  <div class="job-card">
-    <h3>5. Army Agniveer (GD & Tradesman)</h3>
-    <p>✅ Class 10 pass | 🪖 Army | 💰 ₹30,000–₹40,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Physical + written test</li>
-        <li>📆 Notification: February | Exam: May/June</li>
-        <li>📺 <a href="#">Army GD Preparation</a> | 📄 <a href="#">Syllabus PDF</a></li>
-      </ul>
-    </details>
-  </div>
+    </section>
+  </main>
 
-  <div class="job-card">
-    <h3>6. Navy Agniveer (MR)</h3>
-    <p>✅ Class 10 pass | ⚓ Navy | 💰 ₹30,000–₹40,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Cook, Steward, Sailor roles</li>
-        <li>📆 Notification: May & Nov | Exam: July/Jan</li>
-        <li>📺 <a href="#">Navy MR Prep</a> | 📄 <a href="#">Official Notice</a></li>
-      </ul>
-    </details>
-  </div>
-
-  <div class="job-card">
-    <h3>7. Air Force Agniveer Vayu (Non-Science Group)</h3>
-    <p>✅ Class 10 pass | ✈️ Air Force | 💰 ₹30,000–₹40,000/month</p>
-    <details>
-      <summary>View Details</summary>
-      <ul>
-        <li>🔹 Support roles in logistics/admin</li>
-        <li>📆 Notification: Jan & July | Exam: Mar & Sept</li>
-        <li>📺 <a href="#">Vayu Prep Playlist</a> | 📄 <a href="#">Syllabus PDF</a></li>
-      </ul>
-    </details>
-  </div>
-</section>
+  <footer>
+    <div class="container">
+      <p>© 2025 Naukri Saathi | Made for Students with Dreams</p>
+    </div>
+  </footer>
+</body>
+</html>
