--- a/Index.html
+++ b/Index.html
@@ -65,3 +65,29 @@
   </footer>
 </body>
 </html>
+<div class="job-card">
+  <h3>RRB Group D (Railways)</h3>
+  <p>
+    ✅ Eligibility: Class 10 pass<br>
+    🚆 Department: Indian Railways<br>
+    💰 Salary: ₹22,000–₹25,000/month
+  </p>
+  <details>
+    <summary>View Details</summary>
+    <ul>
+      <li>Helper, Track Maintainer, Porter, etc.</li>
+      <li>Selection: CBT only (no interview)</li>
+      <li><a href="#">RRB Group D Playlist</a> | <a href="#">PYQ PDF</a></li>
+    </ul>
+  </details>
+</div>
+
+<div class="job-card">
+  <h3>India Post GDS</h3>
+  <p>
+    ✅ Eligibility: Class 10 pass with good marks in Math & English<br>
+    📬 Department: Postal<br>
+    💰 Salary: ₹10,000–₹14,500/month
+  </p>
+  <details>
+    <summary>View
