--- a/Index.html
+++ b/Index.html
@@ -91,3 +91,67 @@
   </p>
   <details>
     <summary>View
+<div class="job-card">
+  <h3>Assam Direct Recruitment – Grade IV</h3>
+  <p>
+    ✅ Eligibility: Class 8 or 10 pass<br>
+    🏢 Department: State Govt Offices<br>
+    💰 Salary: ₹17,000–₹20,000/month
+  </p>
+  <details>
+    <summary>View Details</summary>
+    <ul>
+      <li>Posts like Peon, Chowkidar, Driver</li>
+      <li>No special skill required</li>
+      <li><a href="#">ADRE Syllabus PDF</a> | <a href="#">Previous Year Papers</a></li>
+    </ul>
+  </details>
+</div>
+
+<div class="job-card">
+  <h3>Assam Police Grade IV Jobs</h3>
+  <p>
+    ✅ Eligibility: Class 10 pass<br>
+    🚓 Department: Assam Police<br>
+    💰 Salary: ₹18,000–₹21,000/month
+  </p>
+  <details>
+    <summary>View Details</summary>
+    <ul>
+      <li>Peon, Cook, Chowkidar, Water Carrier</li>
+      <li>Written + Physical Test</li>
+      <li><a href="#">Assam Police Prep</a> | <a href="#">Admit Card PDF</a></li>
+    </ul>
+  </details>
+</div>
+
+<div class="job-card">
+  <h3>Assam Forest Guard / AFPF Constable</h3>
+  <p>
+    ✅ Eligibility: Class 10 pass<br>
+    🌲 Department: Forest & Wildlife<br>
+    💰 Salary: ₹22,000–₹25,000/month
+  </p>
+  <details>
+    <summary>View Details</summary>
+    <ul>
+      <li>Forest Guard: Written + Physical Test</li>
+      <li>AFPF Constable: Tougher physical fitness</li>
+      <li><a href="#">Forest Guard Syllabus</a> | <a href="#">YouTube Prep</a></li>
+    </ul>
+  </details>
+</div>
+
+<div class="job-card">
+  <h3>Excise Constable (Assam)</h3>
+  <p>
+    ✅ Eligibility: Class 10 pass<br>
+    🍾 Department: Excise<br>
+    💰 Salary: ₹22,000–₹25,000/month
+  </p>
+  <details>
+    <summary>View Details</summary>
+    <ul>
+      <li>Control on liquor-related laws</li>
+      <li>Written + Physical Test</li>
+      <li><a href="#">Exci
