--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@
     <section>
       <h2>📚 Jobs After Class 10</h2>
 
+      <!-- Central Jobs -->
       <div class="job-card">
         <h3>SSC MTS & Havaldar</h3>
         <p>
@@ -53,7 +54,125 @@
         </details>
       </div>
 
-      <!-- Add more job cards in same format -->
+      <div class="job-card">
+        <h3>RRB Group D (Railways)</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🚆 Department: Indian Railways<br>
+          💰 Salary: ₹22,000–₹25,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Helper, Track Maintainer, Porter, etc.</li>
+            <li>Selection: CBT only (no interview)</li>
+            <li><a href="#">RRB Group D Playlist</a> | <a href="#">PYQ PDF</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <div class="job-card">
+        <h3>India Post GDS</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass with good marks in Math & English<br>
+          📬 Department: Postal<br>
+          💰 Salary: ₹10,000–₹14,500/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>No exam – selection based on marks</li>
+            <li>Jobs in rural post offices</li>
+            <li><a href="#">GDS Process Video</a> | <a href="#">Official PDF</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <!-- Assam State Jobs -->
+      <div class="job-card">
+        <h3>Assam Direct Recruitment – Grade IV</h3>
+        <p>
+          ✅ Eligibility: Class 8 or 10 pass<br>
+          🏢 Department: State Govt Offices<br>
+          💰 Salary: ₹17,000–₹20,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Posts like Peon, Chowkidar, Driver</li>
+            <li>No special skill required</li>
+            <li><a href="#">ADRE Syllabus PDF</a> | <a href="#">Previous Year Papers</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <div class="job-card">
+        <h3>Assam Police Grade IV Jobs</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🚓 Department: Assam Police<br>
+          💰 Salary: ₹18,000–₹21,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Peon, Cook, Chowkidar, Water Carrier</li>
+            <li>Written + Physical Test</li>
+            <li><a href="#">Assam Police Prep</a> | <a href="#">Admit Card PDF</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <div class="job-card">
+        <h3>Assam Forest Guard / AFPF Constable</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🌲 Department: Forest & Wildlife<br>
+          💰 Salary: ₹22,000–₹25,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Forest Guard: Written + Physical Test</li>
+            <li>AFPF Constable: Tougher physical fitness</li>
+            <li><a href="#">Forest Guard Syllabus</a> | <a href="#">YouTube Prep</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <div class="job-card">
+        <h3>Excise Constable (Assam)</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🍾 Department: Excise<br>
+          💰 Salary: ₹22,000–₹25,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Control on liquor-related laws</li>
+            <li>Written + Physical Test</li>
+            <li><a href="#">Excise Prep Video</a> | <a href="#">Syllabus</a></li>
+          </ul>
+        </details>
+      </div>
+
+      <div class="job-card">
+        <h3>Home Guard Volunteer (Assam)</h3>
+        <p>
+          ✅ Eligibility: Class 10 pass<br>
+          🛡️ Department: Assam Home Guards<br>
+          💰 Salary: ₹9,000–₹11,000/month
+        </p>
+        <details>
+          <summary>View Details</summary>
+          <ul>
+            <li>Assist Police in traffic, emergencies, VIP events</li>
+            <li>Physical Fitness Test (No written exam)</li>
+            <li><a href="#">Volunteer Enrollment Info</a></li>
+          </ul>
+        </details>
+      </div>
 
     </section>
   </main>
@@ -65,93 +184,3 @@
   </footer>
 </body>
 </html>
-<div class="job-card">
-  <h3>RRB Group D (Railways)</h3>
-  <p>
-    ✅ Eligibility: Class 10 pass<br>
-    🚆 Department: Indian Railways<br>
-    💰 Salary: ₹22,000–₹25,000/month
-  </p>
-  <details>
-    <summary>View Details</summary>
-    <ul>
-      <li>Helper, Track Maintainer, Porter, etc.</li>
-      <li>Selection: CBT only (no interview)</li>
-      <li><a href="#">RRB Group D Playlist</a> | <a href="#">PYQ PDF</a></li>
-    </ul>
-  </details>
-</div>
-
-<div class="job-card">
-  <h3>India Post GDS</h3>
-  <p>
-    ✅ Eligibility: Class 10 pass with good marks in Math & English<br>
-    📬 Department: Postal<br>
-    💰 Salary: ₹10,000–₹14,500/month
-  </p>
-  <details>
-    <summary>View
-<div class="job-card">
-  <h3>Assam Direct Recruitment – Grade IV</h3>
-  <p>
-    ✅ Eligibility: Class 8 or 10 pass<br>
-    🏢 Department: State Govt Offices<br>
-    💰 Salary: ₹17,000–₹20,000/month
-  </p>
-  <details>
-    <summary>View Details</summary>
-    <ul>
-      <li>Posts like Peon, Chowkidar, Driver</li>
-      <li>No special skill required</li>
-      <li><a href="#">ADRE Syllabus PDF</a> | <a href="#">Previous Year Papers</a></li>
-    </ul>
-  </details>
-</div>
-
-<div class="job-card">
-  <h3>Assam Police Grade IV Jobs</h3>
-  <p>
-    ✅ Eligibility: Class 10 pass<br>
-    🚓 Department: Assam Police<br>
-    💰 Salary: ₹18,000–₹21,000/month
-  </p>
-  <details>
-    <summary>View Details</summary>
-    <ul>
-      <li>Peon, Cook, Chowkidar, Water Carrier</li>
-      <li>Written + Physical Test</li>
-      <li><a href="#">Assam Police Prep</a> | <a href="#">Admit Card PDF</a></li>
-    </ul>
-  </details>
-</div>
-
-<div class="job-card">
-  <h3>Assam Forest Guard / AFPF Constable</h3>
-  <p>
-    ✅ Eligibility: Class 10 pass<br>
-    🌲 Department: Forest & Wildlife<br>
-    💰 Salary: ₹22,000–₹25,000/month
-  </p>
-  <details>
-    <summary>View Details</summary>
-    <ul>
-      <li>Forest Guard: Written + Physical Test</li>
-      <li>AFPF Constable: Tougher physical fitness</li>
-      <li><a href="#">Forest Guard Syllabus</a> | <a href="#">YouTube Prep</a></li>
-    </ul>
-  </details>
-</div>
-
-<div class="job-card">
-  <h3>Excise Constable (Assam)</h3>
-  <p>
-    ✅ Eligibility: Class 10 pass<br>
-    🍾 Department: Excise<br>
-    💰 Salary: ₹22,000–₹25,000/month
-  </p>
-  <details>
-    <summary>View Details</summary>
-    <ul>
-      <li>Control on liquor-related laws</li>
-      <li>Written + Physical Test</li>
-      <li><a href="#">Exci
