--- a/Index.html
+++ b/Index.html
@@ -15,6 +15,8 @@
     </div>
   </header>
 
+<div id="google_translate_element" style="text-align: center; margin: 20px;"></div>
+  
   <main class="container">
     <section>
       <h2>📚 Jobs After Class 10</h2>
@@ -182,5 +184,19 @@
       <p>© 2025 Naukri Saathi | Made for Students with Dreams</p>
     </div>
   </footer>
+
+  <script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,as,hi,bn',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+<script type="text/javascript" 
+  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
 </body>
 </html>
