--- a/Index.html
+++ b/Index.html
@@ -10,193 +10,88 @@
   <header>
     <div class="container">
       <h1>Naukri Saathi</h1>
-      <p>Your Friend in the Journey to a Government Job</p>
+      <p>Your Free Guide to Sarkari Naukri Preparation</p>
       <a href="#" class="cta-button">Join Telegram/WhatsApp Group</a>
     </div>
   </header>
 
-<div id="google_translate_element" style="text-align: center; margin: 20px;"></div>
-  
+  <div id="google_translate_element" style="text-align:center; margin: 20px;"></div>
+
   <main class="container">
+    <section class="hero">
+      <h2>Crack Sarkari Exams with 100% Free Study Resources</h2>
+      <p>Curated YouTube playlists, official PDFs & PYQs — trusted by real aspirants across India</p>
+      <div class="cta-buttons">
+        <a href="class10.html" class="cta-box">📘 Class 10 Jobs</a>
+        <a href="class12.html" class="cta-box">📗 Class 12 Jobs</a>
+        <a href="graduate.html" class="cta-box">🎓 Graduate Jobs</a>
+      </div>
+    </section>
+
     <section>
-      <h2>📚 Jobs After Class 10</h2>
+      <h3>Why Naukri Saathi?</h3>
+      <ul>
+        <li>🎯 All exam info in one place — no need to search blindly</li>
+        <li>📚 Only free & official sources (no fake or paid links)</li>
+        <li>📱 Works on phones even with slow internet</li>
+        <li>❤️ Built for students from small towns, Assam & beyond</li>
+      </ul>
+    </section>
 
-      <!-- Central Jobs -->
-      <div class="job-card">
-        <h3>SSC MTS & Havaldar</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🌍 Location: All India<br>
-          💰 Salary: ₹23,000–₹25,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Office helper and Havaldar roles</li>
-            <li>Exam: CBT + Physical Test (for Havaldar)</li>
-            <li><a href="#">YouTube Playlist</a> | <a href="#">PDF Syllabus</a></li>
-          </ul>
-        </details>
+    <section>
+      <h3>Explore Jobs by Qualification</h3>
+      <div class="job-links">
+        <div class="job-box">
+          <h4>📘 Class 10 Jobs</h4>
+          <p>12+ government exams including Police, Railways, Army</p>
+          <a href="class10.html">Explore →</a>
+        </div>
+        <div class="job-box">
+          <h4>📗 Class 12 Jobs</h4>
+          <p>CHSL, Police, Agniveer, Post Office and more</p>
+          <a href="class12.html">Explore →</a>
+        </div>
+        <div class="job-box">
+          <h4>🎓 Graduation Level</h4>
+          <p>SSC CGL, IBPS, UPSC, State PSC, Railways</p>
+          <a href="graduate.html">Explore →</a>
+        </div>
       </div>
+    </section>
 
-      <div class="job-card">
-        <h3>SSC GD Constable</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          💪 Physical test<br>
-          💰 Salary: ₹30,000–₹32,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Police Constable in BSF, CRPF, etc.</li>
-            <li>Selection: Written + Physical test</li>
-            <li><a href="#">YouTube Playlist</a> | <a href="#">PYQ PDF</a></li>
-          </ul>
-        </details>
-      </div>
+    <section>
+      <h3>What You Get</h3>
+      <ul>
+        <li>✅ Direct PDF download links</li>
+        <li>✅ Official YouTube playlists (Adda247, Ankit, etc.)</li>
+        <li>✅ Previous year papers (PYQs)</li>
+        <li>✅ Syllabus, eligibility, tips to crack</li>
+      </ul>
+    </section>
 
-      <div class="job-card">
-        <h3>RRB Group D (Railways)</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🚆 Department: Indian Railways<br>
-          💰 Salary: ₹22,000–₹25,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Helper, Track Maintainer, Porter, etc.</li>
-            <li>Selection: CBT only (no interview)</li>
-            <li><a href="#">RRB Group D Playlist</a> | <a href="#">PYQ PDF</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <div class="job-card">
-        <h3>India Post GDS</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass with good marks in Math & English<br>
-          📬 Department: Postal<br>
-          💰 Salary: ₹10,000–₹14,500/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>No exam – selection based on marks</li>
-            <li>Jobs in rural post offices</li>
-            <li><a href="#">GDS Process Video</a> | <a href="#">Official PDF</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <!-- Assam State Jobs -->
-      <div class="job-card">
-        <h3>Assam Direct Recruitment – Grade IV</h3>
-        <p>
-          ✅ Eligibility: Class 8 or 10 pass<br>
-          🏢 Department: State Govt Offices<br>
-          💰 Salary: ₹17,000–₹20,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Posts like Peon, Chowkidar, Driver</li>
-            <li>No special skill required</li>
-            <li><a href="#">ADRE Syllabus PDF</a> | <a href="#">Previous Year Papers</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <div class="job-card">
-        <h3>Assam Police Grade IV Jobs</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🚓 Department: Assam Police<br>
-          💰 Salary: ₹18,000–₹21,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Peon, Cook, Chowkidar, Water Carrier</li>
-            <li>Written + Physical Test</li>
-            <li><a href="#">Assam Police Prep</a> | <a href="#">Admit Card PDF</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <div class="job-card">
-        <h3>Assam Forest Guard / AFPF Constable</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🌲 Department: Forest & Wildlife<br>
-          💰 Salary: ₹22,000–₹25,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Forest Guard: Written + Physical Test</li>
-            <li>AFPF Constable: Tougher physical fitness</li>
-            <li><a href="#">Forest Guard Syllabus</a> | <a href="#">YouTube Prep</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <div class="job-card">
-        <h3>Excise Constable (Assam)</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🍾 Department: Excise<br>
-          💰 Salary: ₹22,000–₹25,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Control on liquor-related laws</li>
-            <li>Written + Physical Test</li>
-            <li><a href="#">Excise Prep Video</a> | <a href="#">Syllabus</a></li>
-          </ul>
-        </details>
-      </div>
-
-      <div class="job-card">
-        <h3>Home Guard Volunteer (Assam)</h3>
-        <p>
-          ✅ Eligibility: Class 10 pass<br>
-          🛡️ Department: Assam Home Guards<br>
-          💰 Salary: ₹9,000–₹11,000/month
-        </p>
-        <details>
-          <summary>View Details</summary>
-          <ul>
-            <li>Assist Police in traffic, emergencies, VIP events</li>
-            <li>Physical Fitness Test (No written exam)</li>
-            <li><a href="#">Volunteer Enrollment Info</a></li>
-          </ul>
-        </details>
-      </div>
-
+    <section>
+      <h3>About Naukri Saathi</h3>
+      <p>I built Naukri Saathi while working with rural students in Assam. They didn’t have coaching, internet or time to waste. This platform gives them one clutter-free, free, trustworthy place to begin and succeed.</p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>© 2025 Naukri Saathi | Made for Students with Dreams</p>
+      <p>© 2025 Naukri Saathi | Built with love for job aspirants. Contact: naukrisaathi@gmail.com</p>
     </div>
+
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({
+          pageLanguage: 'en',
+          includedLanguages: 'en,as,hi,bn',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        }, 'google_translate_element');
+      }
+    </script>
+    <script type="text/javascript" 
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+    </script>
   </footer>
-
-  <script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,as,hi,bn',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
-  }
-</script>
-<script type="text/javascript" 
-  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-</script>
-
 </body>
 </html>
