--- a/Index.html
+++ b/Index.html
@@ -62,8 +62,8 @@
     <section>
       <h3>What You Get</h3>
       <ul>
-        <li>✅ Direct PDF download links</li>
-        <li>✅ Official YouTube playlists (Adda247, Ankit, etc.)</li>
+        <li>✅ PDF download links</li>
+        <li>✅ Free YouTube videos & playlists (Adda247, Ankit, etc.)</li>
         <li>✅ Previous year papers (PYQs)</li>
         <li>✅ Syllabus, eligibility, tips to crack</li>
       </ul>
@@ -71,13 +71,13 @@
 
     <section>
       <h3>About Naukri Saathi</h3>
-      <p>I built Naukri Saathi while working with rural students in Assam. They didn’t have coaching, internet or time to waste. This platform gives them one clutter-free, free, trustworthy place to begin and succeed.</p>
+      <p>We built Naukri Saathi while working with rural students in Assam. They didn’t have coaching, internet or time to waste. This platform gives them one clutter-free, free, trustworthy place to begin and succeed.</p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>© 2025 Naukri Saathi | Built with love for job aspirants. Contact: naukrisaathi@gmail.com</p>
+      <p>© 2025 Naukri Saathi | Built with love for job aspirants. Contact: 7987044920</p>
     </div>
 
     <script type="text/javascript">
