--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
   <main class="container">
     <section class="hero">
-      <h2>Crack Sarkari Exams with 100% Free Study Resources</h2>
+      <h2>Crack Government Exams with 100% Free Study Resources</h2>
       <p>Curated YouTube playlists, official PDFs & PYQs — trusted by real aspirants across India</p>
       <div class="cta-buttons">
         <a href="class10.html" class="cta-box">📘 Class 10 Jobs</a>
