--- a/class10.html
+++ b/class10.html
@@ -17,26 +17,150 @@
 
   <main class="container">
     <section>
-      <!-- Example Job Card: SSC MTS -->
+
       <div class="job-card">
-        <h3>SSC MTS & Havaldar</h3>
-        <p>✅ Eligibility: Class 10 pass, Age 18–27<br>💰 Salary: ₹23,000–₹25,000/month</p>
-        <details>
-          <summary>View Full Details</summary>
-          <ul>
-            <li><strong>📌 Eligibility:</strong> Class 10 pass, Age 18–27</li>
-            <li><strong>🧪 Selection:</strong> CBT + PET (Havaldar)</li>
-            <li><strong>📄 Syllabus:</strong> <a href="#">Download PDF</a></li>
-            <li><strong>📅 Apply:</strong> June on <a href="https://ssc.nic.in">ssc.nic.in</a></li>
-            <li><strong>📺 Prep Video:</strong> <a href="#">Watch Playlist</a></li>
-            <li><strong>📚 PYQs:</strong> <a href="#">Download</a></li>
-            <li><strong>💡 Tips:</strong> Focus on speed in CBT. Stay fit for PET.</li>
-          </ul>
-        </details>
+        <h3>1. SSC MTS & Havaldar</h3>
+        <ul>
+          <li>✅ Class 10 pass, Age 18–27</li>
+          <li>💼 Office assistant & Havaldar in CBIC/CBN</li>
+          <li>📝 CBT (100 marks), PET for Havaldar</li>
+          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
+          <li>📺 <a href="#">YouTube Playlist</a></li>
+          <li>🌐 Apply: <a href="https://ssc.nic.in">ssc.nic.in</a></li>
+        </ul>
       </div>
 
-      <!-- Add other 11 jobs below in same format -->
-      <!-- You can copy-paste the rest from our previous expanded Class 10 code -->
+      <div class="job-card">
+        <h3>2. SSC GD Constable</h3>
+        <ul>
+          <li>✅ Class 10 pass, Age 18–23</li>
+          <li>🛡️ Constable in BSF, CRPF, CISF, ITBP, SSB, etc.</li>
+          <li>📝 CBT (80 marks), PET & Medical</li>
+          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
+          <li>📺 <a href="#">GD Prep Playlist</a></li>
+          <li>🌐 Apply: <a href="https://ssc.nic.in">ssc.nic.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>3. RRB Group D (Railways)</h3>
+        <ul>
+          <li>✅ Class 10 pass</li>
+          <li>🚆 Track Maintainer, Helper, Assistant</li>
+          <li>📝 Single Stage CBT (100 marks)</li>
+          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
+          <li>📺 <a href="#">RRB Group D Prep</a></li>
+          <li>🌐 Apply: <a href="https://rrbcdg.gov.in">rrbcdg.gov.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>4. India Post GDS</h3>
+        <ul>
+          <li>✅ Class 10 with Math & English</li>
+          <li>📬 Dak Sevak, BPM, ABPM</li>
+          <li>❌ No exam — selection by marks</li>
+          <li>📄 <a href="#">Notification PDF</a></li>
+          <li>📺 <a href="#">GDS Process Video</a></li>
+          <li>🌐 Apply: <a href="https://indiapostgdsonline.gov.in">indiapostgdsonline.gov.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>5. Army Agniveer (GD & Tradesman)</h3>
+        <ul>
+          <li>✅ Class 10 pass, Age 17.5–21</li>
+          <li>🪖 Indian Army General Duty & Trades roles</li>
+          <li>📝 Written + PET + Medical</li>
+          <li>📄 <a href="#">Army GD Syllabus</a></li>
+          <li>📺 <a href="#">Army Prep Playlist</a></li>
+          <li>🌐 Apply: <a href="https://joinindianarmy.nic.in">joinindianarmy.nic.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>6. Navy Agniveer (MR)</h3>
+        <ul>
+          <li>✅ Class 10 pass, Age 17.5–21</li>
+          <li>⚓ Chef, Steward, Sanitary roles</li>
+          <li>📝 Written + PET + Medical</li>
+          <li>📄 <a href="#">Navy MR Syllabus</a></li>
+          <li>📺 <a href="#">Navy Prep Playlist</a></li>
+          <li>🌐 Apply: <a href="https://agniveernavy.cdac.in">agniveernavy.cdac.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>7. Air Force Agniveer Vayu (Non-Science)</h3>
+        <ul>
+          <li>✅ Class 10 pass, Age 17.5–21</li>
+          <li>✈️ Ground Staff – Admin, Accounts, Logistics</li>
+          <li>📝 Online Test + PET + Medical</li>
+          <li>📄 <a href="#">Agniveer Vayu PDF</a></li>
+          <li>📺 <a href="#">Vayu Prep Playlist</a></li>
+          <li>🌐 Apply: <a href="https://agnipathvayu.cdac.in">agnipathvayu.cdac.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>8. Assam Direct Recruitment – Grade IV</h3>
+        <ul>
+          <li>✅ Class 8 or 10 pass</li>
+          <li>🏢 Peon, Chowkidar, Driver roles in Govt offices</li>
+          <li>📝 Written test only</li>
+          <li>📄 <a href="#">ADRE Notification</a></li>
+          <li>📺 <a href="#">Assam Govt Job Prep</a></li>
+          <li>🌐 Apply: <a href="https://sebaonline.org">sebaonline.org</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>9. Assam Police Grade IV</h3>
+        <ul>
+          <li>✅ Class 10 pass</li>
+          <li>🚓 Cook, Peon, Water Carrier etc. in Assam Police</li>
+          <li>📝 Written + PET + Document Check</li>
+          <li>📄 <a href="#">Police Grade IV Syllabus</a></li>
+          <li>📺 <a href="#">Assam Police Prep</a></li>
+          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>10. Assam Forest Guard / AFPF Constable</h3>
+        <ul>
+          <li>✅ Class 10 pass</li>
+          <li>🌲 Forest Guard or AFPF Constable roles</li>
+          <li>📝 Written + Physical Efficiency Test</li>
+          <li>📄 <a href="#">Forest Guard Syllabus</a></li>
+          <li>📺 <a href="#">Forest Guard Prep</a></li>
+          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>11. Assam Excise Constable</h3>
+        <ul>
+          <li>✅ Class 10 pass</li>
+          <li>🍾 Enforce liquor laws & patrol</li>
+          <li>📝 Written + Physical + Medical</li>
+          <li>📄 <a href="#">Excise Syllabus PDF</a></li>
+          <li>📺 <a href="#">Excise Constable Prep</a></li>
+          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
+        </ul>
+      </div>
+
+      <div class="job-card">
+        <h3>12. Home Guard Volunteer (Assam)</h3>
+        <ul>
+          <li>✅ Class 10 pass</li>
+          <li>🛡️ Assist police in traffic, security, events</li>
+          <li>🧪 Physical Test & Basic Training</li>
+          <li>📄 <a href="#">Home Guard Notification</a></li>
+          <li>📺 <a href="#">Home Guard Video</a></li>
+          <li>🌐 Apply: <a href="#">District SP Office</a></li>
+        </ul>
+      </div>
 
     </section>
   </main>
