--- a/class10.html
+++ b/class10.html
@@ -17,151 +17,59 @@
 
   <main class="container">
     <section>
+      <h2>📚 Key Exams After Class 10</h2>
+      <p>After you pass Class 10 (Matriculation), there are many government exams you can try for. These exams help you get good jobs in the central government or your state. Below is a list of popular exams that only need Class 10 pass to apply.</p>
 
-      <div class="job-card">
-        <h3>1. SSC MTS & Havaldar</h3>
-        <ul>
-          <li>✅ Class 10 pass, Age 18–27</li>
-          <li>💼 Office assistant & Havaldar in CBIC/CBN</li>
-          <li>📝 CBT (100 marks), PET for Havaldar</li>
-          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
-          <li>📺 <a href="#">YouTube Playlist</a></li>
-          <li>🌐 Apply: <a href="https://ssc.nic.in">ssc.nic.in</a></li>
-        </ul>
-      </div>
+      <h3>🏛️ Central Level Exams (All India)</h3>
+      <ul>
+        <li><strong>1. SSC MTS & Havaldar:</strong> Office helper jobs and Havaldar posts in central government departments. ✅ Class 10 pass, 🌍 All over India, 💰 ₹23,000–₹25,000/month</li>
+        <li><strong>2. SSC GD Constable:</strong> Join BSF, CRPF, CISF, ITBP, SSB, or SSF. ✅ Class 10 pass, 💪 Physical test needed, 💰 ₹30,000–₹32,000/month</li>
+        <li><strong>3. RRB Group D:</strong> Helper, track maintainer, porter. ✅ Class 10 pass, 🚆 Railway jobs, 💰 ₹22,000–₹25,000/month</li>
+        <li><strong>4. India Post GDS:</strong> Village & town post jobs. ✅ Class 10 with Math & English, 📬 No exam, 💰 ₹10,000–₹14,500/month</li>
+        <li><strong>5. Army Agniveer:</strong> Soldier GD & Tradesman. ✅ Class 10 pass, 📋 Physical + written, 💰 ₹30,000–₹40,000/month</li>
+        <li><strong>6. Navy Agniveer (MR):</strong> Cook, steward, sailor. ✅ Class 10 pass, 🚢 Written + physical, 💰 ₹30,000–₹40,000/month</li>
+        <li><strong>7. Air Force Agniveer Vayu:</strong> Admin, logistics, accounts. ✅ Class 10 pass, ✈️ Written + physical, 💰 ₹30,000–₹40,000/month</li>
+      </ul>
 
-      <div class="job-card">
-        <h3>2. SSC GD Constable</h3>
-        <ul>
-          <li>✅ Class 10 pass, Age 18–23</li>
-          <li>🛡️ Constable in BSF, CRPF, CISF, ITBP, SSB, etc.</li>
-          <li>📝 CBT (80 marks), PET & Medical</li>
-          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
-          <li>📺 <a href="#">GD Prep Playlist</a></li>
-          <li>🌐 Apply: <a href="https://ssc.nic.in">ssc.nic.in</a></li>
-        </ul>
-      </div>
+      <h3>🌾 Assam State Level Exams</h3>
+      <ul>
+        <li><strong>8. Assam Direct Recruitment – Grade IV:</strong> Peon, Chowkidar, Driver. ✅ Class 8 or 10 pass, 🏢 No special skill, 💰 ₹17,000–₹20,000/month</li>
+        <li><strong>9. Assam Police Grade IV:</strong> Peon, Cook in police dept. ✅ Class 10 pass, 🚓 Physical + written, 💰 ₹18,000–₹21,000/month</li>
+        <li><strong>10. Assam Forest Guard / AFPF Constable:</strong> Forest protection jobs. ✅ Class 10 pass, 🌲 Physical + written, 💰 ₹22,000–₹25,000/month</li>
+        <li><strong>11. Excise Constable:</strong> Enforce liquor laws. ✅ Class 10 pass, 🔍 Written + physical, 💰 ₹22,000–₹25,000/month</li>
+        <li><strong>12. Home Guard Volunteer:</strong> Assist police, traffic, events. ✅ Class 10 pass, 🎽 Physical test only, 💰 ₹9,000–₹11,000/month</li>
+      </ul>
 
-      <div class="job-card">
-        <h3>3. RRB Group D (Railways)</h3>
-        <ul>
-          <li>✅ Class 10 pass</li>
-          <li>🚆 Track Maintainer, Helper, Assistant</li>
-          <li>📝 Single Stage CBT (100 marks)</li>
-          <li>📄 <a href="#">Syllabus PDF</a> | 📚 <a href="#">PYQs</a></li>
-          <li>📺 <a href="#">RRB Group D Prep</a></li>
-          <li>🌐 Apply: <a href="https://rrbcdg.gov.in">rrbcdg.gov.in</a></li>
-        </ul>
-      </div>
+      <h3>📅 When to Apply? (Class 10 Pass Jobs)</h3>
+      <p>This is a simple guide to help you remember when these exams usually happen. Dates may change every year, but this is what happened in the past few years.</p>
 
-      <div class="job-card">
-        <h3>4. India Post GDS</h3>
-        <ul>
-          <li>✅ Class 10 with Math & English</li>
-          <li>📬 Dak Sevak, BPM, ABPM</li>
-          <li>❌ No exam — selection by marks</li>
-          <li>📄 <a href="#">Notification PDF</a></li>
-          <li>📺 <a href="#">GDS Process Video</a></li>
-          <li>🌐 Apply: <a href="https://indiapostgdsonline.gov.in">indiapostgdsonline.gov.in</a></li>
-        </ul>
-      </div>
+      <h4>🇮🇳 Central Government Jobs</h4>
+      <table>
+        <thead><tr><th>Exam</th><th>Notification</th><th>Apply</th><th>Exam</th></tr></thead>
+        <tbody>
+          <tr><td>SSC MTS & Havaldar</td><td>June</td><td>June – July</td><td>Oct – Nov</td></tr>
+          <tr><td>SSC GD Constable</td><td>Nov – Dec</td><td>Dec – Jan</td><td>Feb – Mar</td></tr>
+          <tr><td>RRB Group D</td><td>Jan (not yearly)</td><td>Jan – Feb</td><td>Jun – Jul</td></tr>
+          <tr><td>India Post GDS</td><td>April & Sept</td><td>Same month</td><td>❌ No exam</td></tr>
+          <tr><td>Army Agniveer</td><td>Feb</td><td>Feb – Mar</td><td>May – Jun</td></tr>
+          <tr><td>Navy Agniveer (MR)</td><td>May & Nov</td><td>May/Nov</td><td>July / Jan</td></tr>
+          <tr><td>Air Force Agniveer Vayu</td><td>Jan & Jul</td><td>Same month</td><td>Mar & Sept</td></tr>
+        </tbody>
+      </table>
 
-      <div class="job-card">
-        <h3>5. Army Agniveer (GD & Tradesman)</h3>
-        <ul>
-          <li>✅ Class 10 pass, Age 17.5–21</li>
-          <li>🪖 Indian Army General Duty & Trades roles</li>
-          <li>📝 Written + PET + Medical</li>
-          <li>📄 <a href="#">Army GD Syllabus</a></li>
-          <li>📺 <a href="#">Army Prep Playlist</a></li>
-          <li>🌐 Apply: <a href="https://joinindianarmy.nic.in">joinindianarmy.nic.in</a></li>
-        </ul>
-      </div>
+      <h4>🌾 Assam Government Jobs</h4>
+      <table>
+        <thead><tr><th>Exam</th><th>Notification</th><th>Apply</th><th>Exam</th></tr></thead>
+        <tbody>
+          <tr><td>Assam DR Grade IV</td><td>June – July</td><td>Same month</td><td>Sept – Oct</td></tr>
+          <tr><td>Assam Police Grade IV</td><td>Jan – Feb</td><td>30 days</td><td>May – Jun</td></tr>
+          <tr><td>Forest Guard / AFPF</td><td>Dec – Jan</td><td>Dec – Jan</td><td>Apr – May</td></tr>
+          <tr><td>Excise Constable</td><td>March</td><td>Mar – Apr</td><td>Jul – Aug</td></tr>
+          <tr><td>Home Guard Volunteer</td><td>By District</td><td>Local enrol</td><td>❌ No exam</td></tr>
+        </tbody>
+      </table>
 
-      <div class="job-card">
-        <h3>6. Navy Agniveer (MR)</h3>
-        <ul>
-          <li>✅ Class 10 pass, Age 17.5–21</li>
-          <li>⚓ Chef, Steward, Sanitary roles</li>
-          <li>📝 Written + PET + Medical</li>
-          <li>📄 <a href="#">Navy MR Syllabus</a></li>
-          <li>📺 <a href="#">Navy Prep Playlist</a></li>
-          <li>🌐 Apply: <a href="https://agniveernavy.cdac.in">agniveernavy.cdac.in</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>7. Air Force Agniveer Vayu (Non-Science)</h3>
-        <ul>
-          <li>✅ Class 10 pass, Age 17.5–21</li>
-          <li>✈️ Ground Staff – Admin, Accounts, Logistics</li>
-          <li>📝 Online Test + PET + Medical</li>
-          <li>📄 <a href="#">Agniveer Vayu PDF</a></li>
-          <li>📺 <a href="#">Vayu Prep Playlist</a></li>
-          <li>🌐 Apply: <a href="https://agnipathvayu.cdac.in">agnipathvayu.cdac.in</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>8. Assam Direct Recruitment – Grade IV</h3>
-        <ul>
-          <li>✅ Class 8 or 10 pass</li>
-          <li>🏢 Peon, Chowkidar, Driver roles in Govt offices</li>
-          <li>📝 Written test only</li>
-          <li>📄 <a href="#">ADRE Notification</a></li>
-          <li>📺 <a href="#">Assam Govt Job Prep</a></li>
-          <li>🌐 Apply: <a href="https://sebaonline.org">sebaonline.org</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>9. Assam Police Grade IV</h3>
-        <ul>
-          <li>✅ Class 10 pass</li>
-          <li>🚓 Cook, Peon, Water Carrier etc. in Assam Police</li>
-          <li>📝 Written + PET + Document Check</li>
-          <li>📄 <a href="#">Police Grade IV Syllabus</a></li>
-          <li>📺 <a href="#">Assam Police Prep</a></li>
-          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>10. Assam Forest Guard / AFPF Constable</h3>
-        <ul>
-          <li>✅ Class 10 pass</li>
-          <li>🌲 Forest Guard or AFPF Constable roles</li>
-          <li>📝 Written + Physical Efficiency Test</li>
-          <li>📄 <a href="#">Forest Guard Syllabus</a></li>
-          <li>📺 <a href="#">Forest Guard Prep</a></li>
-          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>11. Assam Excise Constable</h3>
-        <ul>
-          <li>✅ Class 10 pass</li>
-          <li>🍾 Enforce liquor laws & patrol</li>
-          <li>📝 Written + Physical + Medical</li>
-          <li>📄 <a href="#">Excise Syllabus PDF</a></li>
-          <li>📺 <a href="#">Excise Constable Prep</a></li>
-          <li>🌐 Apply: <a href="https://slprbassam.in">slprbassam.in</a></li>
-        </ul>
-      </div>
-
-      <div class="job-card">
-        <h3>12. Home Guard Volunteer (Assam)</h3>
-        <ul>
-          <li>✅ Class 10 pass</li>
-          <li>🛡️ Assist police in traffic, security, events</li>
-          <li>🧪 Physical Test & Basic Training</li>
-          <li>📄 <a href="#">Home Guard Notification</a></li>
-          <li>📺 <a href="#">Home Guard Video</a></li>
-          <li>🌐 Apply: <a href="#">District SP Office</a></li>
-        </ul>
-      </div>
-
+      <p><strong>🎯 Tip:</strong> Make your own calendar in your notebook to never miss any job opportunity.</p>
     </section>
   </main>
 
