--- a/class10.html
+++ b/class10.html
@@ -5,6 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Class 10 Govt Jobs - Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 1rem 0;
+    }
+    th, td {
+      border: 1px solid #000;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
+    ul.job-summary li {
+      margin-bottom: 0.4rem;
+    }
+    h3, h4 {
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -21,24 +42,28 @@
       <p>After you pass Class 10 (Matriculation), there are many government exams you can try for. These exams help you get good jobs in the central government or your state. Below is a list of popular exams that only need Class 10 pass to apply.</p>
 
       <h3>🏛️ Central Level Exams (All India)</h3>
-      <ul>
-        <li><strong>1. SSC MTS & Havaldar:</strong> Office helper jobs and Havaldar posts in central government departments. ✅ Class 10 pass, 🌍 All over India, 💰 ₹23,000–₹25,000/month</li>
-        <li><strong>2. SSC GD Constable:</strong> Join BSF, CRPF, CISF, ITBP, SSB, or SSF. ✅ Class 10 pass, 💪 Physical test needed, 💰 ₹30,000–₹32,000/month</li>
-        <li><strong>3. RRB Group D:</strong> Helper, track maintainer, porter. ✅ Class 10 pass, 🚆 Railway jobs, 💰 ₹22,000–₹25,000/month</li>
-        <li><strong>4. India Post GDS:</strong> Village & town post jobs. ✅ Class 10 with Math & English, 📬 No exam, 💰 ₹10,000–₹14,500/month</li>
-        <li><strong>5. Army Agniveer:</strong> Soldier GD & Tradesman. ✅ Class 10 pass, 📋 Physical + written, 💰 ₹30,000–₹40,000/month</li>
-        <li><strong>6. Navy Agniveer (MR):</strong> Cook, steward, sailor. ✅ Class 10 pass, 🚢 Written + physical, 💰 ₹30,000–₹40,000/month</li>
-        <li><strong>7. Air Force Agniveer Vayu:</strong> Admin, logistics, accounts. ✅ Class 10 pass, ✈️ Written + physical, 💰 ₹30,000–₹40,000/month</li>
+      <ul class="job-summary">
+        <li><strong>1. SSC MTS & Havaldar:</strong><br>Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 ₹23,000–₹25,000/month</li>
+        <li><strong>2. SSC GD Constable:</strong><br>Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
+        <li><strong>3. RRB Group D:</strong><br>Helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway jobs<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong>4. India Post GDS:</strong><br>Village & town post jobs.<br>✅ Class 10 with Math & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
+        <li><strong>5. Army Agniveer:</strong><br>Soldier GD & Tradesman.<br>✅ Class 10 pass<br>📋 Physical + written<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong>6. Navy Agniveer (MR):</strong><br>Cook, steward, sailor.<br>✅ Class 10 pass<br>🚢 Written + physical<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong>7. Air Force Agniveer Vayu:</strong><br>Admin, logistics, accounts.<br>✅ Class 10 pass<br>✈️ Written + physical<br>💰 ₹30,000–₹40,000/month</li>
       </ul>
 
+      <br>
+
       <h3>🌾 Assam State Level Exams</h3>
-      <ul>
-        <li><strong>8. Assam Direct Recruitment – Grade IV:</strong> Peon, Chowkidar, Driver. ✅ Class 8 or 10 pass, 🏢 No special skill, 💰 ₹17,000–₹20,000/month</li>
-        <li><strong>9. Assam Police Grade IV:</strong> Peon, Cook in police dept. ✅ Class 10 pass, 🚓 Physical + written, 💰 ₹18,000–₹21,000/month</li>
-        <li><strong>10. Assam Forest Guard / AFPF Constable:</strong> Forest protection jobs. ✅ Class 10 pass, 🌲 Physical + written, 💰 ₹22,000–₹25,000/month</li>
-        <li><strong>11. Excise Constable:</strong> Enforce liquor laws. ✅ Class 10 pass, 🔍 Written + physical, 💰 ₹22,000–₹25,000/month</li>
-        <li><strong>12. Home Guard Volunteer:</strong> Assist police, traffic, events. ✅ Class 10 pass, 🎽 Physical test only, 💰 ₹9,000–₹11,000/month</li>
+      <ul class="job-summary">
+        <li><strong>8. Assam Direct Recruitment – Grade IV:</strong><br>Peon, Chowkidar, Driver.<br>✅ Class 8 or 10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
+        <li><strong>9. Assam Police Grade IV:</strong><br>Peon, Cook in police dept.<br>✅ Class 10 pass<br>🚓 Physical + written<br>💰 ₹18,000–₹21,000/month</li>
+        <li><strong>10. Assam Forest Guard / AFPF Constable:</strong><br>Forest protection jobs.<br>✅ Class 10 pass<br>🌲 Physical + written<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong>11. Excise Constable:</strong><br>Enforce liquor laws.<br>✅ Class 10 pass<br>🔍 Written + physical<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong>12. Home Guard Volunteer:</strong><br>Assist police, traffic, events.<br>✅ Class 10 pass<br>🎽 Physical test only<br>💰 ₹9,000–₹11,000/month</li>
       </ul>
+
+      <br>
 
       <h3>📅 When to Apply? (Class 10 Pass Jobs)</h3>
       <p>This is a simple guide to help you remember when these exams usually happen. Dates may change every year, but this is what happened in the past few years.</p>
