--- a/class10.html
+++ b/class10.html
@@ -43,8 +43,8 @@
 
       <h3>🏛️ Central Level Exams (All India)</h3>
       <ul class="job-summary">
-        <li><strong>1. SSC MTS & Havaldar:</strong><br>Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 ₹23,000–₹25,000/month</li>
-        <li><strong>2. SSC GD Constable:</strong><br>Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
+        <li><strong>1. SSC MTS & Havaldar:</strong><br>➡️ Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 Salary (Per Month): ₹23,000–₹25,000</li>
+        <li><strong>2. SSC GD Constable:</strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF as a police constable.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 Salary (Per Month): ₹30,000–₹32,000</li>
         <li><strong>3. RRB Group D:</strong><br>Helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway jobs<br>💰 ₹22,000–₹25,000/month</li>
         <li><strong>4. India Post GDS:</strong><br>Village & town post jobs.<br>✅ Class 10 with Math & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
         <li><strong>5. Army Agniveer:</strong><br>Soldier GD & Tradesman.<br>✅ Class 10 pass<br>📋 Physical + written<br>💰 ₹30,000–₹40,000/month</li>
