--- a/class10.html
+++ b/class10.html
@@ -45,22 +45,22 @@
       <ul class="job-summary">
         <li><strong>1. SSC MTS & Havaldar:</strong><br>➡️ Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 Salary (Per Month): ₹23,000–₹25,000</li>
         <li><strong>2. SSC GD Constable:</strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF as a police constable.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 Salary (Per Month): ₹30,000–₹32,000</li>
-        <li><strong>3. RRB Group D:</strong><br>Helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway jobs<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong>4. India Post GDS:</strong><br>Village & town post jobs.<br>✅ Class 10 with Math & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
-        <li><strong>5. Army Agniveer:</strong><br>Soldier GD & Tradesman.<br>✅ Class 10 pass<br>📋 Physical + written<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong>6. Navy Agniveer (MR):</strong><br>Cook, steward, sailor.<br>✅ Class 10 pass<br>🚢 Written + physical<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong>7. Air Force Agniveer Vayu:</strong><br>Admin, logistics, accounts.<br>✅ Class 10 pass<br>✈️ Written + physical<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong>3. RRB Group D:</strong><br>➡️ Jobs in Indian Railways like helper, track maintainer, porter, etc.<br>✅ Class 10 pass<br>🚆 Good for railway job lovers<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
+        <li><strong>4. Indian Post GDS (Gramin Dak Sevak)</strong><br>➡️ Post office jobs in villages and towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam – selection by marks<br>💰 Salary (Per Month): ₹10,000–₹14,500</li>
+        <li><strong>5. Army Agniveer (Soldier GD, Tradesman)</strong><br>➡️ Soldier General Duty (GD) and Tradesman roles.<br>✅ Class 10 pass for GD & Tradesman<br>📋 Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
+        <li><strong>6. Navy Agniveer (MR) (Class 10 pass only)</strong><br>➡️ Matric Recruit posts like cook, steward, sailor.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
+        <li><strong>7. Air Force Agniveer Vayu (Non-Science Group)</strong><br>➡️ Trades and support roles (like logistics, admin).<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
       </ul>
 
       <br>
 
       <h3>🌾 Assam State Level Exams</h3>
       <ul class="job-summary">
-        <li><strong>8. Assam Direct Recruitment – Grade IV:</strong><br>Peon, Chowkidar, Driver.<br>✅ Class 8 or 10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
-        <li><strong>9. Assam Police Grade IV:</strong><br>Peon, Cook in police dept.<br>✅ Class 10 pass<br>🚓 Physical + written<br>💰 ₹18,000–₹21,000/month</li>
-        <li><strong>10. Assam Forest Guard / AFPF Constable:</strong><br>Forest protection jobs.<br>✅ Class 10 pass<br>🌲 Physical + written<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong>11. Excise Constable:</strong><br>Enforce liquor laws.<br>✅ Class 10 pass<br>🔍 Written + physical<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong>12. Home Guard Volunteer:</strong><br>Assist police, traffic, events.<br>✅ Class 10 pass<br>🎽 Physical test only<br>💰 ₹9,000–₹11,000/month</li>
+        <li><strong>8. Assam Direct Recruitment – Grade IV</strong><br>➡️ Peon, Chowkidar, Driver, etc. in state govt. offices.<br>✅ Class 8 or 10 pass<br>🏢 No special skill needed<br>💰 Salary (Per Month): ₹17,000–₹20,000</li>
+        <li><strong>9. Assam Police Grade IV Jobs</strong><br>➡️ Peon, Chowkidar, Driver in Assam Police.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 Salary (Per Month): ₹18,000–₹21,000</li>
+        <li><strong>10. Assam Forest Guard / AFPF Constable</strong><br>➡️ Guard forests and wildlife in Assam.<br>✅ Class 10 pass (Forest Guard)<br>🌲 Physical + written test<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
+        <li><strong>11. Excise Constable (Assam)</strong><br>➡️ Police-type job in Assam Excise Dept.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
+        <li><strong>12. Home Guard Volunteer (Assam)</strong><br>➡️ Assist police during events and emergencies.<br>✅ Class 10 pass<br>🎽 Physical fitness test only<br>💰 Salary (Per Month): ₹9,000–₹11,000</li>
       </ul>
 
       <br>
