--- a/class10.html
+++ b/class10.html
@@ -11,6 +11,10 @@
       border-collapse: collapse;
       margin: 1rem 0;
     }
+ul.job-summary {
+  list-style-type: none;
+  padding-left: 0;
+}
     th, td {
       border: 1px solid #000;
       padding: 8px;
